--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
-    "jest": "^27.0.0",
+    "chai": "^5.2.0",
+    "jest": "^27.5.1",
     "jsdom": "^22.1.0",
     "mocha-multi": "^1.1.3"
   }
